--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My App</title>
+    <title>贝壳桌面程序</title>
   </head>
   <body>
     <div id="app"></div>
